# LARA_AUBOi5_AG95

./: README.md
aubo_i5_pgc140/: CMakeLists.txt  package.xml
aubo_i5_pgc140/urdf/: aubo_i5_ezgripper.urdf.xacro  aubo_i5_macro.xacro  dh_pgc140_macro.xacro
lara_bringup/: CMakeLists.txt  package.xml
lara_bringup/config/: aubo_i5_controllers.yaml  aubo_i5_joint_names.yaml
lara_bringup/launch/: bringup.launch  bringup_old.launch
lara_description/: CMakeLists.txt  package.xml
lara_description/launch/: aubo_i5_pgc140.rviz  display.launch  spawn_box.launch  spawn_parts.launch  spawn_plastic_bin.launch
lara_description/urdf/: aubo_i5_macro.xacro  aubo_i5_pgc140.urdf.xacro  lara_base_scene.xacro  pgc140_macro.xacro
lara_manipulation/: CMakeLists.txt  package.xml
lara_manipulation/src/: pick_and_place.py
lara_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
lara_moveit_config/config/: aubo_i5_pgc140.srdf  fake_controllers.yaml  gazebo_controllers.yaml  gazebo_lara_base_scene.urdf  gazebo_moveit_controllers.yaml  joint_limits.yaml  lara_base_scene.srdf  ompl_planning.yaml  ros_controllers.yaml
lara_moveit_servo/: CMakeLists.txt  package.xml
lara_moveit_servo/config/: aubo_i5_simulated_config.yaml  joystick_servo_config.yaml  joystick_to_twist.yaml  pose_tracking_servo_config.yaml  pose_tracking_settings.yaml
lara_moveit_servo/launch/: pose_tracker.launch  servo_server.launch  test.launch
lara_moveit_servo/src/: pose_tracking_server.cpp  test.py
lara_simulation_tools/: CMakeLists.txt  package.xml
lara_teleop/: CMakeLists.txt  package.xml
(+46 files in other folders)
